[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = ["ratatui"]
ratatui = ["dep:ratatui"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ratatui = { version = "0.29.0", optional = true }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tracing = "0.1"